--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,3 +1,4 @@
+
 /*---------------------------------Animations--------------------------------------*/
 @keyframes slideToLeft {
 	from {
@@ -103,6 +104,18 @@
 	}
 
 	to {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+@keyframes popupFadeIn {
+	0% {
+		opacity: 0;
+		transform: scale(0.9);
+	}
+
+	100% {
 		opacity: 1;
 		transform: scale(1);
 	}
@@ -295,6 +308,7 @@ htmml {
 	text-align: center;
 	transition: all 0.3s ease-in-out;
 }
+
 .menu-button {
 	background-color: black;
 	color: white;
@@ -1005,7 +1019,7 @@ htmml {
 .signup-popup input {
 	background-color: rgb(0, 0, 0, 0.1);
 	color: white;
-	border: 1px solid rgb(188, 184, 184);
+	border: 1px solid rgb(63, 63, 63);
 	border-radius: 20px;
 	padding-top: 15px;
 	padding-bottom: 15px;
@@ -1077,19 +1091,39 @@ htmml {
 }
 
 .signup-popup {
+	background-image: url('../src/imgs/signin-back.jpg');
+	background-repeat: no-repeat;
+	background-size: 1200px;
 	width: 60%;
 	position: relative;
 	margin: 0;
-	bottom: 200px;
+	bottom: 400px;
 	z-index: 3;
 	background-color: black;
-	border: 1px solid gray;
+	border: 1px solid rgb(60, 60, 60);
 	border-radius: 5px;
 	transition: all 0.2s ease-in-out;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	opacity: 0;
+	transform: scale(0.9);
+	transition: opacity 0.3s ease, transform 0.3s ease;
+}
+/* Add this CSS to your styles */
+.icon {
+	color: gray; /* Default color for inactive icons */
+	cursor: pointer;
+	transition: color 0.3s;
+  }
+  
+  .icon.active {
+	color: white; /* Color for the active icon */
+  }
+  
+.signup-popup.show {
+	animation: popupFadeIn 0.3s forwards;
 }
 
 .signup-popup:hover {
@@ -1099,7 +1133,7 @@ htmml {
 .signup-exit {
 	position: relative;
 	right: -47%;
-	top: 10px;
+	top: 20px;
 }
 
 .signup-exit i {
@@ -1812,7 +1846,7 @@ htmml {
 .tour-guide-list.visible {
 	opacity: 1;
 	transform: scale(1);
-}	
+}
 
 .filtertour-element {
 	display: flex;
