--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,4 +1,3 @@
-
 /*---------------------------------Animations--------------------------------------*/
 @keyframes slideToLeft {
 	from {
@@ -1111,17 +1110,20 @@ htmml {
 	transform: scale(0.9);
 	transition: opacity 0.3s ease, transform 0.3s ease;
 }
+
 /* Add this CSS to your styles */
 .icon {
-	color: gray; /* Default color for inactive icons */
+	color: gray;
+	/* Default color for inactive icons */
 	cursor: pointer;
 	transition: color 0.3s;
-  }
-  
-  .icon.active {
-	color: white; /* Color for the active icon */
-  }
-  
+}
+
+.icon.active {
+	color: white;
+	/* Color for the active icon */
+}
+
 .signup-popup.show {
 	animation: popupFadeIn 0.3s forwards;
 }
@@ -1769,14 +1771,147 @@ htmml {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: start;
+	align-items: center;
 	margin: auto;
 }
 
 .mytrips-body {
-	background-color: white;
+	display: grid;
+	grid-template-columns: repeat(3, 3fr);
+	/* Create 3 equal columns */
+	gap: 140px;
+	/* Add space between items */
+	margin: 50px auto;
+	justify-items: stretch;
+	/* Optional: stretch items to fill the grid */
+	align-items: center;
+	/* Optional: constrain the width of the grid */
 }
 
+.mytrips-element {
+	min-width: 250px;
+	background-color: white;
+	max-width: 300px;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+}
+
+.mytrips-element-status {
+	position: relative;
+	color: rgb(150, 150, 150);
+	font-size: 20px;
+	margin: 0;
+	bottom: 270px;
+	left: 170px;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+
+}
+
+.mytrips-element img {
+	width: 300px;
+	filter: brightness(0.5);
+}
+
+.mytrips-element-h4 {
+	width: 50%;
+}
+
+.mytrips-element-h4 h4 {
+	position: relative;
+	bottom: 70px;
+	left: 20px;
+	color: white;
+	font-size: 25px;
+	width: 60%;
+	margin: 0;
+	height: 0;
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.mytrips-element-details {
+	padding: 0px 10px 0px 40px;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-content: center;
+	align-items: start;
+	margin-top: 20px;
+}
+
+.mytrips-element-details span {
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: center;
+	column-gap: 10px;
+
+}
+
+.mytrips-element-details p {
+	font-size: 10px;
+}
+.mytrips-elements-button{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	padding: 20px;
+	align-items:center ;
+	background-color: #f0f3f4;
+}
+.mytrips-elements-button span{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	column-gap: 5px;
+}
+.mytrips-elements-button button{
+	width: 80px;
+	padding: 8px 0px;
+	border-radius: 50px;
+	background-color: black;
+	color: white;
+	border: 2px solid black;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+}
+.mytrips-elements-button button:hover{
+	background-color: white;
+	color: black;
+}
+.checkout-body{
+	width: 97%;
+	background-color: white;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+	margin-bottom: 30px;
+}
+.checkout-details{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: start;
+	width: 100%;
+	padding: 10px;
+}
+.checkout-element{
+	list-style: none;	
+	width: 100%;
+	padding: 0;
+}
+.checkout-element li{
+	padding: 0px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+.checkout-total{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	width: 100%;
+	align-items: center;
+}
 /*---------viewmore---------*/
 
 .viewmore img {
@@ -1901,9 +2036,17 @@ htmml {
 	border-bottom-right-radius: 5px;
 }
 
-.viewmore-first-overlay {
+.viewmore-first-overlay-details {
 	position: relative;
-	bottom: 170px;
+	bottom: 210px;
+}
+
+.viewmore-first-overlay-counters {
+	position: relative;
+	bottom: 200px;
+}
+
+.viewmore-first-overlay {
 	left: 0px;
 	color: white;
 	display: flex;
@@ -2120,7 +2263,7 @@ h5 {
 	row-gap: 10px;
 }
 
-.requests-button button {
+.requests-button button ,.checkout-body button{
 	width: 150px;
 	padding: 10px;
 	background-color: white;
@@ -2130,7 +2273,7 @@ h5 {
 	cursor: pointer;
 }
 
-.requests-button button:hover {
+.requests-button button:hover,.checkout-body button:hover {
 	background-color: black;
 	color: white;
 }
