--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1141,7 +1141,7 @@ width:25%;
 	/* Color for the active icon */
 }
 
-.signup-popup.show {
+.signup-popup.show,.password-popup.show {
 	animation: popupFadeIn 0.3s forwards;
 }
 
@@ -1810,7 +1810,7 @@ width:25%;
 }
 
 .mytrips-element {
-	min-width: 250px;
+	min-width: 300px;
 	background-color: white;
 	max-width: 300px;
 	box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
@@ -1829,6 +1829,7 @@ width:25%;
 
 .mytrips-element img {
 	width: 300px;
+	height: 200px;
 	filter: brightness(0.5);
 }
 
@@ -1899,7 +1900,7 @@ width:25%;
 	color: black;
 }
 .checkout-body{
-	width: 97%;
+	width: 94%;
 	background-color: white;
 	padding: 20px;
 	border-radius: 5px;
@@ -1911,8 +1912,8 @@ width:25%;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: start;
-	width: 100%;
-	padding: 10px;
+	width: 96%;
+	padding: 0px 30px;
 }
 .checkout-element{
 	list-style: none;	
