--- a/React/src/index.css
+++ b/React/src/index.css
@@ -933,10 +933,13 @@ htmml {
 }
 
 .select-dropdown {
+	border-radius: 5px;
+	border: #d5d4d4 1px solid;
 	padding: 10px;
 	margin-right: 10px;
 	padding: 10px 50px;
 	text-align: left;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 .filter-button {
@@ -1498,34 +1501,18 @@ htmml {
 /*-------------------------tourguide**********************/
 .whole-tourguide {
 	background-color: #f6f6f6;
+	height: fit-content;
 }
 
 .staff-div {
-	height: fit-content;
-	padding: 50px 0px;
-	display: flex;
-	flex-direction: column;
-	row-gap: 30px;
-}
-
-.info-button {
+	width: 80%;
+	margin: 100px auto;
 	display: grid;
-	grid-template-columns: 9fr 1fr;
-	justify-content: space-between;
+	grid-template-columns: 1fr 1fr 1fr;
+	justify-content: space-around;
 	align-items: center;
-	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-	width: 90%;
-	margin: 0px auto;
+	gap: 60px;
 }
-
-.info-button-left {
-	display: grid;
-	grid-template-columns: 1fr 7fr;
-	justify-content: center;
-	align-items: center;
-	padding: 10px 20px 30px 20px;
-}
-
 .button {
 	width: 100%;
 	text-align: center;
@@ -1548,25 +1535,71 @@ htmml {
 	color: #E1E8EE;
 	cursor: pointer;
 }
+.info-button {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+	width: 200px;
+	height: fit-content;
+	border-radius: 20px;
+	margin: 0px auto;
+	padding: 30px;
+	background-color: white;
+}
+
+.info-button-left {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	row-gap: 19px;
+}
 
 .staff-div img {
 	width: 120px;
 	border-radius: 100%;
 	height: 120px;
+	padding: 10px;
+	border: rgb(237, 235, 235) 10px solid;
 }
 
 .tour-info {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	align-items: self-start;
-	row-gap: 20px;
+	align-items: center;
+	row-gap: 30px;
 }
-
+.info-span{
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+.info-title{
+	font-size: 10px;
+	color: gray;
+}
+.info-details{
+	font-size: 20px;
+	color: black;
+	font-weight: 600;
+}
+.info-ratings{
+	display: flex;
+	flex-direction: row;
+	column-gap: 5px;
+	justify-content: center;
+	align-items: center;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 .staff-div h3 {
 	margin-bottom: 10px;
-	font-size: 25px;
+	font-size: 20px;
 	font-size: 800;
+	text-align: center;
 }
 
 .staff-div h4 {
@@ -1575,10 +1608,7 @@ htmml {
 	width: 90%;
 }
 
-.staff-div p {
-	font-weight: 200;
-	margin: 0;
-}
+
 
 .tour-icons {
 	display: flex;
@@ -1839,6 +1869,9 @@ input[type="file"] {
 }
 
 /*-----------my trips------------*/
+.mytrips-off{
+	height: 50vh;
+}
 .mytrips {
 	width: 80%;
 	display: flex;
@@ -2091,6 +2124,7 @@ input[type="file"] {
 
 .gallery-link {
 	margin-left: 30px;
+	margin-right: 30px;
 	width: 150px;
 	/* Decreased width of each thumbnail */
 	border: none;
@@ -2189,11 +2223,15 @@ input[type="file"] {
 	transform: scale(1);
 }
 
+.filtertour-body{
+	background-color: none;
+}
 .filtertour-element {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	padding: 10px 0;
+	border-bottom: 1px solid rgb(235, 235, 235);
 }
 
 .filtertour-element h4 {
@@ -2444,10 +2482,10 @@ li {
 }
 
 .requests-body,
-.filtertour-body,
 .cancel-requests {
 	background-color: white;
-	padding: 10px;
+	padding: 20px;
+	padding-top: 5px;
 	border-radius: 5px;
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	width: 100%;
@@ -2464,6 +2502,7 @@ li {
 	align-items: start;
 	width: 90%;
 	margin: auto;
+	border-bottom: 1px solid rgb(215, 212, 212);
 }
 
 .requests-element h4,
@@ -2541,6 +2580,9 @@ h5 {
 }
 
 /*--------myorders---------*/
+.orders-off{
+	height: 50vh;
+}
 .myorders {
 	width: 90%;
 	display: flex;
@@ -2562,6 +2604,7 @@ h5 {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 8fr 7fr 4fr;
+	border-bottom: 1px solid rgb(238, 237, 237);
 }
 
 .myorders-element-info h3 {
@@ -2591,3 +2634,5 @@ p,
 	margin: 0;
 	padding: 0;
 }
+
+
